--- a/Resources/Prototypes/Catalog/VendingMachines/Inventories/salvage.yml
+++ b/Resources/Prototypes/Catalog/VendingMachines/Inventories/salvage.yml
@@ -3,9 +3,13 @@
   startingInventory:
     Crowbar: 2
     Pickaxe: 4
-    OreBag: 2
+    OreBag: 4
     Flare: 4
     FlashlightLantern: 2
+    Floodlight: 2
     HandheldGPSBasic: 2
     RadioHandheld: 2
     WeaponProtoKineticAccelerator: 4
+    SeismicCharge: 2
+    FultonBeacon: 1
+    Fulton: 2
