Trying to give slimes the ability to change opacity

--- a/Resources/Prototypes/Species/slime.yml
+++ b/Resources/Prototypes/Species/slime.yml
@@ -7,7 +7,7 @@
   defaultSkinTone: "#b8b8b8"
   markingLimits: MobSlimeMarkingLimits
   dollPrototype: MobSlimePersonDummy
-  skinColoration: Hues
+  skinColoration: TranslucentHues
 
 - type: speciesBaseSprites
   id: MobSlimeSprites
