Chocolate bars can now be torn open by animals

--- a/Resources/Prototypes/Entities/Objects/Consumable/Food/snacks.yml
+++ b/Resources/Prototypes/Entities/Objects/Consumable/Food/snacks.yml
@@ -144,6 +144,13 @@
       - id: FoodSnackChocolateBar
     sound:
       path: /Audio/Effects/unwrap.ogg
+  - type: SpawnItemsOnDoAfter # impstation edit
+    duration: 5
+    items:
+      - id: FoodPacketChocolateTrash
+      - id: FoodSnackChocolateBar
+    sound:
+      path: /Audio/Effects/unwrap.ogg
   - type: SolutionContainerManager
     solutions:
       food:
